# vector-dbs-crud

./: .gitignore  .pre-commit-config.yaml  DATA_MODELING_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
sql/: init_pgvector.sql  init_pgvector_with_indexes.sql
src/chroma_db_examples/: chroma_crud.py  metadata_filtering_example.py  multi_collection_example.py  multi_tenant_example.py
src/pgvector_examples/: metadata_filtering_example.py  multi_table_example.py  multi_tenant_example.py  pgvector_crud.py
src/utils/: pg_embedding_util.py
